update name and print configs

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Cv</title>
+    <title>Felipe Norato - Angular Specialist - CV</title>
     <base href="/" />
     <script
       src="https://kit.fontawesome.com/51d6fb3ee0.js"
